# ftp-calculator

./: .env.dev  .env.prod.example  .gitignore  .~lock.ftp-core-test.xlsm#  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  docker-compose.dev.yml  french-texts-inventory.csv  ftp-calculator.sln  ftp-core-test.ods  ftp-core-test.xlsm
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
app/backend/: Cargo.toml
app/backend/src/: lib.rs  main.rs
app/backend/src/api/: analytics.rs  compute.rs  cubes.rs  curves.rs  datasets_api.rs  executions.rs  executions_v3.rs  export.rs  hypercubes.rs  linkers.rs  mod.rs  portfolio.rs  portfolios.rs  portfolios_v3.rs  rate_matrices.rs  rate_series.rs  runoff.rs  stacks.rs  studies.rs  study_units.rs
app/backend/src/compute/: interpolate.rs  mod.rs  runner.rs  seed.rs
app/backend/src/db/: mod.rs  models.rs
app/backend/src/db/migrations/: 001_init.sql  001_initial_schema.sql  002_hypercubes.sql  002_store_inputs.sql  003_contracts_datasets.sql  003_portfolios.sql  004_entities_and_fixes.sql  004_study_units.sql  005_studies.sql  005_v3_schema.sql  006_executions.sql  006_executions_v3.sql  007_interp_method.sql  007_schedule_type.sql  008_assignment_methods.sql  008_finalize.sql  009_curve_series_link.sql
app/dashboard/: index.html  tsconfig.json  vite.config.ts
app/dashboard/src/: App.svelte
app/dashboard/src/lib/api/: client.ts
app/tray/: Cargo.toml
app/tray/src/: main.rs
app/web-app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/web-app/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
app/web-app/.svelte-kit/types/: route_meta_data.json
app/web-app/src/: app.css  main.ts
app/web-app/src/lib/: usePyodide.ts
app/web-app/src/routes/: +layout.svelte  +page.ts
crates-core/ftp-calculator-bindings-c/: Cargo.toml  copy_artifacts.sh
crates-core/ftp-calculator-bindings-c/src/: lib.rs
crates-core/ftp-calculator-bindings-pyo3/: Cargo.toml
crates-core/ftp-calculator-bindings-pyo3/src/: lib.rs
crates-core/ftp-calculator-core/: Cargo.toml
crates-core/ftp-calculator-core/src/: error.rs  lib.rs  result.rs  utils.rs
crates-core/ftp-calculator-core/src/curve/: components.rs
crates-core/ftp-calculator-core/src/inputs/: mod.rs  validation.rs
crates-core/ftp-calculator-core/src/methods/: behavioral.rs  duration.rs  floating.rs  flux.rs  ldi.rs  mod.rs  pool.rs  refinancing.rs  replicating.rs  stock.rs
crates-core/ftp-calculator-core/tests/: integration_tests.rs
crates/ftp-calculator-bindings-c/: Cargo.toml
crates/ftp-calculator-bindings-pyo3/: Cargo.toml
crates/ftp-calculator-core/: Cargo.toml
crates/ftp-calculator-core/src/: error.rs  lib.rs  result.rs
crates/ftp_core/: Cargo.toml
crates/ftp_core/src/: error.rs  flux.rs  lib.rs  result.rs  stock.rs
crates/ftp_core/tests/: integration_tests.rs
crates/ftp_core_bindings_c/: Cargo.toml  build.rs
crates/ftp_core_bindings_c/src/: lib.rs
crates/ftp_core_bindings_pyo3/: Cargo.toml
crates/ftp_core_bindings_pyo3/src/: lib.rs
data/datageneration_scripts/: README.md  generate_all.py  generated_curves.json  load_vectors_schedules.py  sample_portfolio.json  seed_api.py
data/datageneration_scripts/_archive/: credit_line_profile.json  decaying_pool_profile.json  generate_schedules.py  nmd_behavioral_profiles.json  revolving_profile.json  schedule_annuity_120m.csv  schedule_bullet_24m.csv  schedule_linear_60m.csv
data/datageneration_scripts/_archive/data_contracts/: README.md  contracts.csv  generate_contracts.py
data/datageneration_scripts/_archive/data_entities/: generate_entities.py  treasuries.csv
data/datageneration_scripts/data_rate_matrices/: generate_rate_matrices.py
data/datageneration_scripts/data_rate_series/: basis_curves.json  current_curves.json  generate_ftp_spreads.py  generate_rate_series.py  historical_estr.csv  historical_eur_credit_spread.csv  historical_eur_tlp.csv  historical_euribor.csv  historical_sofr.csv  historical_usd_credit_spread.csv  historical_usd_tlp.csv  historical_xccy_eur_usd.csv  load_rate_series_to_db.py  volatility_surface.json
data/datageneration_scripts/data_schedules/: Schedule_10Y_Standard.xlsx  Schedule_20Y_Long.xlsx  Schedule_2Y_Linear.xlsx  Schedule_5Y_Multi-Period.xlsx  config.yaml  generate_schedule_matrix.py  resultats_matrix.csv  schedule_120m.csv  schedule_240m.csv  schedule_24m.csv
data/datageneration_scripts/data_vector_outs/: Concave_Growth_2021-2022.xlsx  Convex_Growth_2020-2024.xlsx  Convex_Stable_2020-2024.xlsx  Exponential_Decline_2020-2024.xlsx  Linear_Growth_2020-2024.xlsx  Logistic_Growth_2020-2024.xlsx  concave_uniform.csv  convex_normal.csv  convex_trend_mild_noise.yaml  convex_up.csv  exponential_down.csv  generate_vector_outs.py  linear_up.csv  logistic_growth.csv  logistic_trend.yaml  trend_exp_down.yaml  trend_lineair_abs_noise.yaml
data/datageneration_scripts/datasets/: load_portfolios_to_db.py
data/dev/: seed.sql
docs/: dashboard-execution.md  dashboard-vision.md  ftp-simulator-plan-v3.md  ftp-simulator-plan-v4.md  ftp-simulator-plan-v5.md  ftp-simulator-plan-v6.md  ftp-simulator-plan-v7.md  ftp-simulator-plan.md  prompt.md  tmp  tmp.json
excel-addin/ftp_addin/: FtpFunctions.cs  FtpNative.cs  NativeLibraryLoader.cs  ftp_addin-AddIn.dna  ftp_addin.csproj
excel-addin/ftp_addin/scripts/: build.ps1
excel/Interop/: bindings.h
excel/ftp_addin/: FtpFunctions.cs  FtpNative.cs  FtpRibbon.cs
installer/: build-deb.sh  docker-compose.prod.yml
installer/debian/DEBIAN/: control  postinst  prerm
installer/ftp-installer-helper/: Cargo.toml
installer/ftp-installer-helper/src/: main.rs
installer/macos/: bundle.sh
installer/windows/: setup.iss
python/: pyproject.toml
python-lib/: README.md  pyproject.toml
python-lib/src/ftp_calculator/: __init__.py  __init__.pyi  _core.cp310-win_amd64.pyd
python-lib/src/ftp_core/: __init__.py  _core.cp310-win_amd64.pyd
python-lib/tests/: test_ftp.py
python/src/ftp_core/: __init__.py  __init__.pyi  _core.pyi
python/tests/: test_ftp.py
scripts/: release.py
(+186 files in other folders)
