[workspace]
members = [
    "crates-core/ftp-calculator-core",
    "crates-core/ftp-calculator-bindings-c",
    "crates-core/ftp-calculator-bindings-pyo3",
    "app/backend",
    # "app/tray",  # requires GTK3 on Linux; built only in Windows/macOS CI
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["FTP Simulator Team"]
license = "MIT"

[workspace.dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true