[build-system]
requires = [ "maturin>=1.0,<2.0",]
build-backend = "maturin"

[project]
name = "ftp-calculator"
version = "0.1.805"
description = "Funds Transfer Pricing (FTP) calculator — Python bindings for a Rust engine"
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "ftp", "funds-transfer-pricing", "finance", "banking", "rust",]
classifiers = [ "Development Status :: 4 - Beta", "Intended Audience :: Financial and Insurance Industry", "Programming Language :: Rust", "Programming Language :: Python :: Implementation :: CPython", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Topic :: Office/Business :: Financial",]
dependencies = [ "numpy",]
[[project.authors]]
name = "Charles Teuf"
email = "charles.teuf@example.com"

[project.license]
text = "MIT OR Apache-2.0"

[project.urls]
Homepage = "https://github.com/ce-teuf/FTP_CALCULATOR"
Documentation = "https://ce-teuf.github.io/FTP_CALCULATOR"
Repository = "https://github.com/ce-teuf/FTP_CALCULATOR"
Issues = "https://github.com/ce-teuf/FTP_CALCULATOR/issues"

[project.optional-dependencies]
dev = [ "pytest", "numpy",]

[tool.maturin]
module-name = "ftp_core._core"
manifest-path = "../crates/ftp-calculator-bindings-pyo3/Cargo.toml"
python-source = "src"
