[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ftp-core"
version = "0.1.796"
description = "Funds Transfer Pricing (FTP) calculator — Python bindings for a Rust engine"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.maturin]
module-name = "ftp_core._core"
manifest-path = "../crates/ftp_core_bindings_pyo3/Cargo.toml"
python-source = "src"
