[package]
name = "ftp_core_bindings_c"
version = "0.1.796"
edition = "2021"
description = "C bindings for the FTP core calculation library"
authors = ["Votre Nom <votre.email@example.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://votre-username.github.io/votre-repo"
repository = "https://github.com/votre-username/votre-repo"
readme = "README.md"
keywords = ["ftp", "calculator", "finance"]
categories = ["finance", "science"]

[lib]
name = "ftp_core_bindings_c"
crate-type = ["cdylib"]

[dependencies]
ftp_core = { path = "../ftp_core", version = "0.1.796" }
ndarray = "0.16.1"

[build-dependencies]
cbindgen = "0.29.0"

[dev-dependencies]
approx = "0.5"
