[package]
name = "ftp_core_bindings_pyo3"
version = "0.1.799"
edition = "2021"
description = "Python bindings for FTP Core library"
authors = [ "Votre Nom <votre.email@example.com>",]
license = "MIT OR Apache-2.0"
documentation = "https://votre-username.github.io/votre-repo"
repository = "https://github.com/votre-username/votre-repo"
readme = "README.md"
keywords = [ "ftp", "calculator", "python",]
categories = [ "finance", "api-bindings",]

[lib]
name = "_core"
crate-type = [ "cdylib",]

[dependencies]
numpy = "0.26.0"
ndarray = "0.16.1"

[dependencies.ftp_core]
path = "../ftp_core"
version = "0.1.796"

[dependencies.pyo3]
version = "0.26.0"
features = [ "extension-module",]
